Adjust for 7.x branch